# hl-predictor-model

./: .gitignore  .pylintrc  README.md  configs.py  evaluate.py  forecast.py  lint.py  pyproject.toml  requirements.txt  train.py
core/: train.py
data/sets/: BTC_metrics.csv
data/utils/: converter.py  data_preprocessing.py
models/: base_model.py  model_factory.py
models/arima/: configs.py  model.py  utils.py
models/lstm/: configs.py  model.py
models/prophet/: configs.py  model.py
trained_models/lstm/: model.pt
utils/: model_commons.py  tf_settings.py
