[tool.poetry]
name = "hl-predictor-model"
version = "0.1.0"
description = "ML model for predicting crypto price in hyperliquid"
authors = ["thanhvu40827@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"
pandas = "^2.2.3"
torch = "^2.5.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 